# landingpage_test

./: .gitignore  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py
frontend/: Dockerfile  package-lock.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AboutSection.jsx  CTASection.jsx  Certifications.jsx  ConsultationModal.jsx  FeaturedProjects.jsx  FloatingContact.jsx  Footer.jsx  Header.jsx  HeroSection.jsx  LoginMaintenanceModal.jsx  PartnerLogos.jsx  ProjectCard.jsx  ScrollToTop.jsx  ServicesSection.jsx  TrustSignals.jsx
frontend/src/pages/: AboutPage.jsx  CertificationsPage.jsx  HomePage.jsx  IndustriesPage.jsx  NewsPage.jsx  NotFoundPage.jsx  PortfolioPage.jsx  ProjectDetailPage.jsx  SolutionsPage.jsx
frontend/src/services/: api.js
nginx/: nginx.conf
